flower-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: flower-deploy
  namespace: flower-ns
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: flower-app
  template:
    metadata:
      labels:
        app: flower-app
    spec: 
      affinity:
        nodeAffinity:
        #   requiredDuringSchedulingIgnoredDuringExecution:
        #     nodeSelectorTerms:
        #     - matchExpressions:
        #       - key: training
        #         operator: In 
        #         values: 
        #         - devops
          # preferredDuringSchedulingIgnoredDuringExecution:
          # - weight: 1
          #   preference:
          #     matchExpressions:
          #     - key: training
          #       operator: In
          #       values:
          #       - devops
      # tolerations:
      # - key: env
      #   operator: Equal
      #   value: prod 
      #   effect: NoSchedule
      containers: 
        - name: flower-cont
          image: shubha20/flower-web-app:latest
          ports:
            - containerPort: 3015

          # resources:
          #   requests:
          #     cpu: "100m"
          #     memory: "128Mi"
          #   limits:
          #     cpu: "200m"
          #     memory: "256Mi"
      
      # nodeSelector:
      #   training: devops
