mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deploy
  namespace: flower-ns
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels: 
        app: mongo
    spec:
      # affinity:
      #   podAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #     - labelSelector:
      #         matchExpressions:
      #         - key: training
      #           operator: In
      #           values:
      #           - devops
      #       topologyKey: kubernetes.io/hostname
          
      #   podAntiAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #     - labelSelector:
      #         matchExpressions:
      #         - key: training
      #           operator: In
      #           values:
      #           - devops
      #       topologyKey: kubernetes.io/hostname

      containers:
        - name: mongodb-cont
          image: mongo:8.0
          ports:
            - containerPort: 27017
          resources:
            requests:
              memory: "128Mi"
              cpu: "150m"
            limits:
              memory: "256Mi"
              cpu: "300m"
