resource-limit-template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8srequiredresources
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredResources
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package k8srequiredresources
 
      # ---------------- POD ----------------
      violation[{"msg": msg}] {
        input.review.kind.kind == "Pod"
        container := input.review.object.spec.containers[_]
        not has_resources(container)
        msg := sprintf("Pod container %v must have requests and limits", [container.name])
      }
 
      # ---------------- DEPLOYMENT ----------------
      violation[{"msg": msg}] {
        input.review.kind.kind == "Deployment"
        container := input.review.object.spec.template.spec.containers[_]
        not has_resources(container)
        msg := sprintf("Deployment container %v must have requests and limits", [container.name])
      }
 
      # ---------------- HELPER ----------------
      has_resources(container) {
        container.resources
        container.resources.requests
        container.resources.limits
      }
